--- a/Dojo_Sweeper/Dojo_Sweeper.html
+++ b/Dojo_Sweeper/Dojo_Sweeper.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="Dojo_Sweeper.css">
 </head>
 <body>
-    <h2>Dojo Sweeper<h2>
-    <div id="the-dojo">still loading... there may be an error</div>
+    <div id="container">
+        <h2>Dojo Sweeper<h2>
+        <div id="the-dojo">still loading... there may be an error</div>
+        <button class="restart" onclick=restart()>Restart</button>
+    </div>
     <script src="Dojo_Sweeper.js"></script>
 </body>
 </html>
