--- a/EightBall/index.html
+++ b/EightBall/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Koulen&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="container">
     <h1 id="title">All of life's answers at your fingertips!</h1>
     <div class="content">
         <img src="ballStill.jpg" alt="ball" id="ball">
@@ -24,6 +25,7 @@
 
         <!-- Output/the answer - feedback on a response -->
         <h2 id="answer"></h2>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
