--- a/video-preview/index.html
+++ b/video-preview/index.html
@@ -25,17 +25,10 @@
 
         <!-- left column -->
         <div class="col-l">
-
-            <!-- this is a placeholder replace it with a real video -->
-            <!-- <figure class="placeholder">
-                <svg style="text-anchor:middle;" width="720" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 720x400" preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#868e96"></rect>
-                    <text x="50%" y="50%" dy=".3em" fill="#dee2e6" >Replace Me!</text>
-                </svg> -->
+            
             <!-- </figure> -->
             <video id="video" onmouseenter="preview(this)" onmouseleave="exit(this)" onclick="unmute(this)" width="720"; height="400" controls>
-                <source src="/Users/jessegreenough/Documents/Coding-Dojo/Web_Dev_Wk2/video-preview/assets/pexels-shvets-production-8376368.mp4" type="video/mp4">
+                <source src="./assets/pexels-shvets-production-8376368.mp4" type="video/mp4">
                 Video not supported!
             </video>
 
