Minor typo fixes and src changes

--- a/likingLikes/likingLikes.html
+++ b/likingLikes/likingLikes.html
@@ -1,29 +1,3 @@
-<!--PART 1-->
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="likingLikes.css">
-    <title>likeingLikes</title>
-</head>
-<body>
-    <div class="box">
-        <div class="details">
-            <h2 class="title">Some User</h2>
-            <p class="display"><span id="var">3</span> like(s)</p>
-            <div class="x"><button onclick="addLike()" class="button">Like</button></div>
-        </div>
-        <p class="content">This is some filler text, it can be anything we like</p>
-    </div>
-    <script src="likingLikes.js"></script>
-</body>
-</html> -->
-
-            <!--PART 2-->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,9 +8,8 @@
     <link rel="stylesheet" href="likingLikes.css">
 </head>
 <body styl="margin: 0px; padding: 0px;"> <div class="body">
-
     <!--div left side blank space-->
-    <div class="blank">lsdnlsknd</div>
+    <div class="blank"></div>
 
     <!--div main info column-->
     <div class="mainC">
@@ -45,7 +18,7 @@
         <div class="feed">
             <div class="personal">
                 <div class="persBox">
-                    <img class="img" src="/Users/jessegreenough/Documents/Coding-Dojo/Web_Dev_Wk1/icons/user-circle.jpg" alt="avatar">
+                    <img class="img" src="./icons/user-circle.jpg" alt="avatar">
                     <a class="link" href="">Add an Avatar</a>
                     <div class="name">James Doe</div>
                 </div>
