Updated image routes

--- a/DojoWeather/DojoWeather.html
+++ b/DojoWeather/DojoWeather.html
@@ -54,7 +54,7 @@
                 <!--Today-->
                 <div class="days">
                     <div class="dayTitle">Today</div>
-                    <img class="dayImg" src="/Users/jessegreenough/Documents/Coding-Dojo/Web_Dev_Wk2/DojoWeather/assets/some_rain.jpg" alt="rainy">
+                    <img class="dayImg" src="./assets/some_rain.jpg" alt="rainy">
                     <div class="description">some rain</div>
                     <div class="highLow">
                         <div class="high"><div id="high1">24</div>°</div>
@@ -65,7 +65,7 @@
                 <!--Tomorrow-->
                 <div class="days">
                     <div class="dayTitle">Tomorrow</div>
-                    <img class="dayImg" src="/Users/jessegreenough/Documents/Coding-Dojo/Web_Dev_Wk2/DojoWeather/assets/some_sun.png" alt="sunny">
+                    <img class="dayImg" src="./assets/some_sun.png" alt="sunny">
                     <div class="description">some sun</div>
                     <div class="highLow">
                         <div class="high"><div id="high2">27</div>°</div>
@@ -76,7 +76,7 @@
                 <!--Friday-->
                 <div class="days">
                     <div class="dayTitle">Friday</div>
-                    <img class="dayImg" src="/Users/jessegreenough/Documents/Coding-Dojo/Web_Dev_Wk2/DojoWeather/assets/some_clouds.png" alt="cloudy">
+                    <img class="dayImg" src="./assets/some_clouds.png" alt="cloudy">
                     <div class="description">some clouds</div>
                     <div class="highLow">
                         <div class="high"><div id="high3">21</div>°</div>
@@ -87,7 +87,7 @@
                 <!--Saturday-->
                 <div class="days">
                     <div class="dayTitle">Saturday</div>
-                    <img class="dayImg" src="/Users/jessegreenough/Documents/Coding-Dojo/Web_Dev_Wk2/DojoWeather/assets/some_sun.png" alt="sunny">
+                    <img class="dayImg" src="./assets/some_sun.png" alt="sunny">
                     <div class="description">some sun</div>
                     <div class="highLow">
                         <div class="high"><div id="high4">26</div>°</div>
@@ -98,7 +98,7 @@
             <div class="alsoBlank"></div>
             <!--cookie Pop-Up-->
             <div id="cookie">
-                <img class="cookieImg" src="/Users/jessegreenough/Documents/Coding-Dojo/Web_Dev_Wk2/DojoWeather/assets/cookie.png" alt="cookie">
+                <img class="cookieImg" src="./assets/cookie.png" alt="cookie">
                 <div class="cookieMessage">
                     <div class="alert">Stop! Cookie Time</div>
                     <div class="message">We use cookies (sadly not the edible ones) to personalize content and ads, to provide social media features and to analyse our traffic. <a href="">Read More...</a></div>
