Formatting edits and additions

--- a/DojoWeather/DojoWeather.html
+++ b/DojoWeather/DojoWeather.html
@@ -13,7 +13,9 @@
     <div class="topNav">
 
         <!--Title-->
-        <div class="navTitle"><strong>DojoWeather</strong></div>
+        <div class="navTitle">
+            <strong>DojoWeather</strong>
+        </div>
 
         <!--Cities Links-->
         <div class="cityLinks">
